...
                      );
                    },
                  ),
                );
              },
              child: const Text(
                'Registrar Empréstimo',
              ),
            ),

            const SizedBox(height: 16),

            ElevatedButton(
...
                      );
                    },
                  ),
                );
              },
              child: const Text(
                'Listar Empréstimos',
              ),
            ),
          ],
        ),
      ),
    );
...
