...
  }

  @override
  Widget build(BuildContext contextTelaCadastroAluno) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Cadastrar Aluno'),
      ),
      body: Padding(
        padding: const EdgeInsets.all(16),
        child: Form(
          key: _formKey,
          child: Column(
...
                          'Erro ao cadastrar o aluno.',
                        ),
                      ),
                    );
                  }
                },
                child: const Text('Cadastrar'),
              ),
            ],
          ),
        ),
      ),
    );
...
